# CatSpot

./: .gitignore  .gitmodules  DESIGN.md  README.md  TODO.md  gradlew  settings.gradle.kts
.gitea/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/sidespot/: MainActivity.kt  SidespotApp.kt
app/src/main/java/com/sidespot/api/: SpotifyWebApi.kt
app/src/main/java/com/sidespot/audio/: AudioCallback.kt  AudioFocusManager.kt
app/src/main/java/com/sidespot/auth/: AuthManager.kt  AuthenticatorService.kt
app/src/main/java/com/sidespot/bridge/: Models.kt  NativeBridge.kt  PlayerEvent.kt
app/src/main/java/com/sidespot/history/: PlayHistoryManager.kt
app/src/main/java/com/sidespot/service/: MediaCommandBridge.kt  PlaybackService.kt
app/src/main/java/com/sidespot/settings/: SettingsManager.kt
app/src/main/java/com/sidespot/ui/: BitmapBlurTransformation.kt  DynamicTheme.kt  FocusHighlight.kt  HistoryScreen.kt  LibraryScreen.kt  LoginScreen.kt  MiniPlayer.kt  Navigation.kt  NewEpisodesScreen.kt  NowPlayingScreen.kt  QueueScreen.kt  SavedAlbumsScreen.kt  SavedShowsScreen.kt  SearchScreen.kt  SettingsScreen.kt  ShowDetailScreen.kt  Theme.kt  TrackActionsSheet.kt  TrackListScreen.kt
app/src/main/java/com/sidespot/viewmodel/: LibraryViewModel.kt  PlayerViewModel.kt  QueueManager.kt  SearchViewModel.kt  TrackListViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: authenticator.xml
native/: Cargo.toml
native/src/: audio_sink.rs  bridge.rs  error.rs  lib.rs  library.rs  metadata.rs  player.rs  session.rs
scripts/: get_token.py
